[package]
name = "stack-overflow-detection"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-backtrace   = { version = "0.15.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println     = { version = "0.13.0", features = ["esp32c3"] }
critical-section = "1.2.0"
