[package]
name = "stack-overflow-detection"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32c3", "unstable"] }
esp-backtrace   = { version = "0.16.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-bootloader-esp-idf = "0.1.0"
esp-println     = { version = "0.14.0", features = ["esp32c3"] }
critical-section = "1.2.0"
