[package]
name = "stack-overflow-detection"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", package = "esp-backtrace", rev = "452c042", features = [
    "esp32c3",
    "panic-handler",
    "println",
]}
esp-bootloader-esp-idf = {git = "https://github.com/esp-rs/esp-hal", package = "esp-bootloader-esp-idf", rev = "452c042", features = ["esp32c3"]}
esp-hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal", rev = "452c042", features = [
    "esp32c3",
    "unstable",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal", package = "esp-println", rev = "452c042", features = ["esp32c3", "log-04"] }
