[package]
name = "blinky"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.18.0", features = [
    "esp32c3",
    "panic-handler",
    "println",
]}
esp-bootloader-esp-idf  = { version = "0.3.0", features = ["esp32c3"]}
esp-hal = { version = "1.0.0-rc.1",features = [
    "esp32c3",
    "unstable",
] }
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
