[package]
name = "button-interrupt"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.19.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.10.0", features = ["esp32c3"] }
critical-section = "1.1.2"
