[package]
name = "defmt"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "1.0.1"
esp-backtrace = { version = "0.18.1", features = [
    "esp32c3",
    "panic-handler",
    "defmt",
]}
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"]}
esp-hal = { version = "1.0.0",features = [
    "esp32c3",
    "unstable",
] }
esp-println = { version = "0.16.1", features = [
    "esp32c3",
    "log-04",
    "defmt-espflash",
] }
