[package]
name = "dma"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.20.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.11.0", features = ["esp32c3"] }
