[package]
name = "hello_world"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ff8457d", features = [
    "esp32c3",
    # "exception-handler",
    "panic-handler",
    "println",
]}
esp-bootloader-esp-id = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ff8457d", features = ["esp32c3"]}
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ff8457d",features = [
    "esp32c3",
    "unstable",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ff8457d", features = ["esp32c3", "log-04"] }
log = { version = "0.4.28" }
