[package]
name = "http-client"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# TODO: Explain
resolver = "2"

# TODO: Explain
[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3
[profile.dev]
lto = "off"

[dependencies]
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", package = "esp-alloc", rev = "452c042" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal", rev = "452c042", features = [
    "esp32c3",
    "unstable",
] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", package = "esp-backtrace", rev = "452c042", features = [
    "esp32c3",
    "panic-handler",
    "println",
]}
esp-bootloader-esp-idf = {git = "https://github.com/esp-rs/esp-hal", package = "esp-bootloader-esp-idf", rev = "452c042", features = ["esp32c3"]}
esp-println = { git = "https://github.com/esp-rs/esp-hal", package = "esp-println", rev = "452c042", features = ["esp32c3", "log-04"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", package = "esp-rtos", rev = "452c042", features = ["esp32c3", "log-04"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", package = "esp-radio", rev = "452c042", features = [
    "esp32c3",
    "wifi",
    "smoltcp",
    "unstable",
    "log-04",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
embedded-io         = { version = "0.6.1", default-features = false }
