[package]
name = "http-client"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# TODO: Explain
resolver = "2"

# TODO: Explain
[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3
[profile.dev]
lto = "off"

[dependencies]
esp-alloc = { version = "0.9.0" }
esp-hal = { version = "1.0.0-rc.1",features = [
    "esp32c3",
    "unstable",
] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
esp-backtrace = { version = "0.18.0", features = [
    "esp32c3",
    "panic-handler",
    "println",
]}
esp-bootloader-esp-idf  = { version = "0.3.0", features = ["esp32c3"]}
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
esp-rtos = { version = "0.1.0", features = ["esp32c3", "log-04", "esp-radio"] }
esp-radio = { version = "0.16.0", features = [
    "esp32c3",
    "wifi",
    "smoltcp",
    "unstable",
    "log-04",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
embedded-io         = { version = "0.6.1", default-features = false }
