[package]
name = "panic"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal             = { package = "esp32c3-hal", version = "0.13.0" }
esp-backtrace   = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println     = { version = "0.7.1", features = ["esp32c3"] }
