[package]
edition      = "2024"
name         = "no_std-training"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
embassy-executor = "0.9.0"
embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-time     = "0.5.0"
embedded-io-async = "0.6.1"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = [
  "esp32c3",
] }
esp-hal = { version = "1.0.0", features = [
  "esp32c3",
  "unstable",
  "log-04",
] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.17.0", features = ["esp32c3", "unstable", "wifi", "log-04"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp32c3",
  "esp-radio",
  "log-04",
] }
shtcx = { git = "https://github.com/Fristi/shtcx-rs", branch = "feature/async-support" }
static_cell      = "2.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
