[package]
edition      = "2024"
name         = "no_std-training"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
embassy-executor = "0.9.0"
embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-sync = "0.7.0"
embassy-time     = "0.5.0"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = [
  "esp32c3",
] }
esp-hal = { version = "1.0.0", features = [
  "esp32c3",
  "unstable",
  # "log-04",
] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.17.0", features = ["esp32c3", "unstable", "wifi",
#  "log-04"
 ] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp32c3",
  "esp-radio",
  # "log-04",
] }
static_cell = "2.1.1"
edge-captive = { version = "0.6.0", default-features = false, features = ["io", "log"] }
edge-nal-embassy = "0.6.0"
futures-lite = { version = "2.6.1", default-features = false }
log = "0.4.28"
edge-dhcp = "0.5.0"
edge-nal = "0.5.0"
picoserve = { version = "0.15.0", default-features = false, features = ["embassy"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
